@@ -5,6 +5,8 @@ WISH? monotonic clocks times/GetTickCount for coarse corrections?
 	- ev_stat watchers will now use inotify as a mere hint on
           kernels <2.6.25, or if the filesystem is not in the
           "known to be good" list.
+        - better mingw32 compatibility (it's not as borked as native win32)
+          (analysed by Roger Pack).
 
 3.48 Thu Oct 30 09:02:37 CET 2008
 	- further optimise away the EPOLL_CTL_ADD/MOD combo in the epoll
